--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="cabecalho">
         <div class="cabecalho_esquerda">
-            <img src="Assets/logo.png" width="194" height="58" alt="">
+            <img src="Assets/logo.png" width="100" height="58" alt="">
         </div>
         <div class="cabecalho_direita">
             <div class="sessao">
@@ -32,7 +32,10 @@
                 <a href="#">Plano alimentar</a>
             </div>
             <div class="consultas">
-                <a href="#">Consultas e Interações</a>
+                <a href="#">Consultas e</a>
+            </div>
+            <div class="interacoes">
+                <a href="#">Interações</a>
             </div>
             <div class="mensagens">
                 <a href="#">Mensagens</a>
@@ -45,18 +48,23 @@
             </div>
     </aside>
 
-    <section class="planoAlimentar">
-        <img src="Assets/do-utilizador.png" alt="">
-        <p>Paciente1 - Leito 123</p>
-        
-        <img src="Assets/do-utilizador.png" alt="">
-        <p>Paciente1 - Leito 123</p>
-        
-        <img src="Assets/do-utilizador.png" alt="">
-        <p>Paciente1 - Leito 123</p>
-
-        <img src="Assets/do-utilizador.png" alt="">
-        <p>Paciente1 - Leito 123</p>
+    <section class="plano">
+        <div class="leito1">
+            <img src="Assets/do-utilizador.png" alt="">
+            <p>Paciente1 - Leito 123</p>
+        </div>
+        <div class="leito2">
+            <img src="Assets/do-utilizador.png" width="42" height="42" alt="">
+            <p>Paciente1 - Leito 123</p>
+        </div>
+        <div class="leito3">
+            <img src="Assets/do-utilizador.png" width="42" height="42" alt="">
+            <p>Paciente1 - Leito 123</p>
+        </div>
+        <div class="leito3">
+            <img src="Assets/do-utilizador.png" width="42" height="42" alt="">
+            <p>Paciente1 - Leito 123</p>
+        </div>
     </section>
 
     <script src="script.js"></script>
