--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
             </div>
             <div class="notification-container">
                 <img src="Assets/sino.png" width="20" height="20" alt="Notificações" id="bell-icon">
-                <span id="notification-count" class="notification-count">3</span> <!-- Exemplo de notificações -->
+                <span id="notification-count" class="notification-count">3</span>
             </div>
-            <!-- Lista de notificações, inicialmente oculta -->
             <div id="notification-list" class="notification-list">
                 <ul>
                     <li>Nova mensagem de Dr. Fulano</li>
-                    <li>Paciente X alterou seu plano alimentar</li>
+                    <li>Paciente X solicitou alteração do plano alimentar</li>
                     <li>Nova consulta agendada</li>
                 </ul>
             </div>
@@ -35,46 +34,51 @@
             <img src="Assets/do-utilizador.png" alt="">
             <h2>Profissional</h2>
             <div class="doutor">
-            <p>Doutor Fulano</p>
+                <p>Doutor Fulano</p>
             </div>
         </section>
         <hr>
-            <div class="planoAlimentar">
-                <a href="#">Plano alimentar</a>
-            </div>
-            <div class="consultas">
-                <a href="#">Consultas e</a>
-            </div>
-            <div class="interacoes">
-                <a href="#">Interações</a>
-            </div>
-            <div class="mensagens">
-                <a href="#">Mensagens</a>
-            </div>
-            <div class="entregas">
-                <a href="#">Entregas</a>
-            </div>
-            <div class="solicitacoes">
-                <a href="#">Solicitações</a>
-            </div>
+        <div class="planoAlimentar">
+            <a href="#">Plano Alimentar</a>
+        </div>
+        <div class="consultas">
+            <a href="#">Consultas e Interações</a>
+        </div>
+        <div class="mensagens">
+            <a href="#">Mensagens</a>
+        </div>
+        <div class="entregas">
+            <a href="#">Entregas</a>
+        </div>
+        <div class="solicitacoes">
+            <a href="#">Solicitações</a>
+        </div>
     </aside>
 
     <section class="plano">
         <div class="leito1">
-            <img src="Assets/do-utilizador.png" width="42" height="42" alt="">
-            <p>Paciente1 - Leito 123</p>
+            <a href="link-do-paciente1.html">
+                <img src="Assets/do-utilizador.png" width="42" height="42" alt="">
+                <p>Paciente1 - Leito 123</p>
+            </a>
         </div>
         <div class="leito2">
-            <img src="Assets/do-utilizador.png" width="42" height="42" alt="">
-            <p>Paciente1 - Leito 123</p>
+            <a href="link-do-paciente2.html">
+                <img src="Assets/do-utilizador.png" width="42" height="42" alt="">
+                <p>Paciente2 - Leito 124</p>
+            </a>
         </div>
         <div class="leito3">
-            <img src="Assets/do-utilizador.png" width="42" height="42" alt="">
-            <p>Paciente1 - Leito 123</p>
+            <a href="link-do-paciente3.html">
+                <img src="Assets/do-utilizador.png" width="42" height="42" alt="">
+                <p>Paciente3 - Leito 125</p>
+            </a>
         </div>
-        <div class="leito3">
-            <img src="Assets/do-utilizador.png" width="42" height="42" alt="">
-            <p>Paciente1 - Leito 123</p>
+        <div class="leito4">
+            <a href="link-do-paciente4.html">
+                <img src="Assets/do-utilizador.png" width="42" height="42" alt="">
+                <p>Paciente4 - Leito 126</p>
+            </a>
         </div>
     </section>
 
