--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
         </div>
         <div class="cabecalho_direita">
             <div class="sessao">
-                <a href="#">Encerrar sessão</a>
+                <a href="login.html">Encerrar sessão</a>
             </div>
             <div class="notification-container">
                 <img src="Assets/sino.png" width="20" height="20" alt="Notificações" id="bell-icon">
